--- a/pages/portfolio/smart-brain.html
+++ b/pages/portfolio/smart-brain.html
@@ -1,107 +1,112 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 
-    <head>
+<head>
 
-        <!--Meta Tags-->
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Oussama Bouchikhi, resume, personal, portfolio, cv" />
-        <meta name="keywords" content="Oussama Bouchikhi, resume, personal, portfolio, cv" />
-        <meta name="author" content="Oussama Bouchikhi" />
+    <!--Meta Tags-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Oussama Bouchikhi, resume, personal, portfolio, cv" />
+    <meta name="keywords" content="Oussama Bouchikhi, resume, personal, portfolio, cv" />
+    <meta name="author" content="Oussama Bouchikhi" />
 
-        <!--Page Title-->
-        <title>Smartbrain</title>
+    <!--Page Title-->
+    <title>Smartbrain</title>
 
-        <!--Plugins Css-->
-        <link rel="stylesheet" type="text/css" href="../../css/plugins.css" />
-        <!--Main Styles Css-->
-        <link rel="stylesheet" type="text/css" href="../../css/style.css" />
-        <!--Color Css-->
-        <link rel="stylesheet" type="text/css" href="../../css/tan-color.css" />
+    <!--Plugins Css-->
+    <link rel="stylesheet" type="text/css" href="../../css/plugins.css" />
+    <!--Main Styles Css-->
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" />
+    <!--Color Css-->
+    <link rel="stylesheet" type="text/css" href="../../css/tan-color.css" />
 
-        <!--Modernizr Js-->
-        <script src="../../js/modernizr.js"></script>
+    <!--Modernizr Js-->
+    <script src="../../js/modernizr.js"></script>
 
-        <!--Favicons-->
-        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
+    <!--Favicons-->
+    <link rel="shortcut icon" href="../../img/favicon.png" type="image/x-icon">
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <!--Preloader Start-->
-        <div class="preloader">
-            <div class="loading-text">
-                <span class="loading-text-words" data-preloader="L">L</span>
-                <span class="loading-text-words" data-preloader="O">O</span>
-                <span class="loading-text-words" data-preloader="A">A</span>
-                <span class="loading-text-words" data-preloader="D">D</span>
-                <span class="loading-text-words" data-preloader="I">I</span>
-                <span class="loading-text-words" data-preloader="N">N</span>
-                <span class="loading-text-words" data-preloader="G">G</span>
-            </div>
+    <!--Preloader Start-->
+    <div class="preloader">
+        <div class="loading-text">
+            <span class="loading-text-words" data-preloader="L">L</span>
+            <span class="loading-text-words" data-preloader="O">O</span>
+            <span class="loading-text-words" data-preloader="A">A</span>
+            <span class="loading-text-words" data-preloader="D">D</span>
+            <span class="loading-text-words" data-preloader="I">I</span>
+            <span class="loading-text-words" data-preloader="N">N</span>
+            <span class="loading-text-words" data-preloader="G">G</span>
         </div>
-        <!--Preloader End-->
+    </div>
+    <!--Preloader End-->
 
 
-        <!-- Header Start -->
-        <header>
-            <!-- Logo -->
-            <a class="logo" href="../../index.html"><span>OB</span></a>
+    <!-- Header Start -->
+    <header>
+        <!-- Logo -->
+        <a class="logo" href="../../index.html"><span>MT</span></a>
 
-            <!-- Back button -->
-            <a class="back-button" href="../../index.html#/portfolio">
-                <i class="fas fa-reply"></i>
-            </a>
+        <!-- Back button -->
+        <a class="back-button" href="../../index.html#/portfolio">
+            <i class="fas fa-reply"></i>
+        </a>
 
-        </header>
-        <!-- Header End -->
+    </header>
+    <!-- Header End -->
 
 
-        <div class="single-blog" data-simplebar>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 offset-lg-2">
-                        <div class="mt-80">
-                            <div class="blog-image mb-40">
-                                <img src="../../img/portfolio/img-2.png" alt="Smartbrain">
-                            </div>
-
-                            <div class="col-lg-10 offset-lg-1">
-                                <ul class="blog-category mb-15">
-                                    <li> React </li>
-                                    <li> NodeJs </li>
-                                    <li> Firebase </li>
-                                </ul>
-
-                                <h2 class="blog-title text-center">
-                                  <a href="https://smartterbrain.herokuapp.com/">Smartbrain</a>
-                                </h2>
-
-                                <div class="blog-meta mt-15 mb-30 text-center">
-                                    <span class="date">March 22, 2020</span>
-                                </div>
-                            </div>
-
-                            <div class="blog-content">
-                                <p>Smartbrain is face detection web application built using React for the frontend & NodeJs as a backend</p>
-                                <p>I Also used Clarifai api for detecting the faces</p>
-                            </div>
-
+    <div class="single-blog" data-simplebar>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="mt-80">
+                        <div class="blog-image mb-40">
+                            <img src="../../img/portfolio/img-2.png">
                         </div>
+
+                        <div class="col-lg-10 offset-lg-1">
+                            <ul class="blog-category mb-15">
+                                <li> Angular </li>
+                                <li> TypeScript </li>
+                                <li> Bootstrap </li>
+                            </ul>
+
+                            <h2 class="blog-title text-center">
+                                <a href="https://www.wendys.com/">Wendy's Interactive</a>
+                            </h2>
+
+                            <div class="blog-meta mt-15 mb-30 text-center">
+                                <span class="date">March 22, 2020</span>
+                            </div>
+                        </div>
+
+                        <div class="blog-content">
+                            <p>Developed an interactive menu application for Wendy's, aimed at enhancing the user
+                                experience for customers browsing menu items and placing orders. The project focused on
+                                creating a responsive and visually appealing interface using Angular, allowing users to
+                                easily navigate through various food options and promotions. My solution included
+                                optimizing loading times and ensuring accessibility, which resulted in a 35% increase in
+                                online engagement and improved customer satisfaction.</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
-        <!--Jquery JS-->
-        <script src="../../js/jquery.min.js"></script>
-        <!--Plugins JS-->
-        <script src="../../js/plugins.min.js"></script>
-        <!--Site Main JS-->
-        <script src="../../js/main.js"></script>
-    </body>
+    <!--Jquery JS-->
+    <script src="../../js/jquery.min.js"></script>
+    <!--Plugins JS-->
+    <script src="../../js/plugins.min.js"></script>
+    <!--Site Main JS-->
+    <script src="../../js/main.js"></script>
+</body>
+
 </html>
