change portfolio images

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <section id="home" class="page section-home" style="background-image: url('img/background/bg-img.jpg');">
             <div class="banner-text">
                 <div class="profile-img">
-                    <img src="img/profile-img.jpg" alt="person-image">
+                    <img src="img/profile-img.jpeg" alt="person-image">
                 </div>
 
                 <h4>Mohamed Taha</h4>
@@ -131,7 +131,7 @@
 
                         <!-- about image -->
                         <div class="about-img">
-                            <img src="img/about-img.jpg" alt="">
+                            <img src="img/about-img.jpeg" alt="">
                         </div>
 
                     </div>
