--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 <div class="text-slideshow" data-effect="fx3">
                     <div class="text-slide text-slide--current">
-                        <h2 class="animate-title">Frontend Developer</h2>
+                        <h2 class="animate-title">FullStack Developer | JavaScript, PHP Expert</h2>
                     </div>
                 </div>
 
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="col-lg-7">
-                        <h3 class="mb-20">Frontend Developer/Angular Specialist</h3>
+                        <h3 class="mb-20">FullStack Developer | JavaScript, PHP Expert</h3>
                         <p>Hello! I'm <strong>Mohamed Taha</strong>. Full-stack software engineer with over 5 years of
                             experience. I have developed a
                             wide range of applications using <strong>NodeJs, AngularJS, and MongoDB</strong>. I have
